navigate between Main and Login activities. using intent. put data in intent. get data in Login activity  and set it to the text view

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
 
 
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <TextView
         android:id="@+id/tVinfo"
         android:layout_width="match_parent"
         android:layout_height="100dp"
