--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,8 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background_gradient_180"
+    >
 
+    <TextView
+        android:id="@+id/tVUserInfo"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/inputHeight"
+        android:layout_margin="@dimen/margin"
+        android:background="@drawable/edit_text_shape"
+        android:gravity="center"
+        android:padding="15dp"
+
+
+
+        android:paddingStart="@dimen/textPadding"
+        android:textAlignment="center"
+        android:textColor="@color/orange"
+        android:text="@string/user_information"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/tVemailInfo"
+        app:layout_constraintVertical_bias="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlSymmetry" />
 
     <TextView
         android:id="@+id/tVemailInfo"
