--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_grey"
+    android:background="@drawable/background_gradient"
     tools:context=".MainActivity">
+
+
 
 
     <androidx.appcompat.widget.AppCompatEditText
@@ -58,10 +60,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/eTpassword"
-
-
         app:layout_constraintVertical_bias="0"
-        tools:ignore="RtlSymmetry" />
+        tools:ignore="RtlSymmetry"
+
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
