--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_grey">#E4E4E4</color>
-    <color name="orange">#FF3D00</color>
+    <color name="almostBlack">#1C1C1C</color>
     <color name="orangeLight">#FF6433</color>
 </resources>
